--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vanilla Tailwind CSS Boilerplate</title>
+		<title>Deepak Kumar | WHO53</title>
 		<script type="module" src="src/main.js" defer></script>
 	</head>
 	<body class="bg-gray-900 text-white min-h-screen flex flex-col">
