--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 		<script type="module" src="src/main.js" defer></script>
 	</head>
 	<body class="bg-gray-900 text-white min-h-screen flex flex-col">
-  <div class="w-full flex justify-between items-center px-8 py-4">
-    <div class="text-2xl font-bold mt-2">DK.</div>
-  </div>
+		<div class="w-full flex justify-between items-center px-8 py-4">
+			<div class="text-2xl font-bold mt-2">DK.</div>
+		</div>
 
-  <div class="flex items-center justify-start flex-grow pl-6">
-    <h1 class="text-5xl md:text-7xl font-extrabold bg-clip-text text-transparent [background-image:linear-gradient(90.13deg,#d1aad7_.11%,#c88bc4_25.06%,#dd787f_50%,#e78b8d_74.8%,#f2b3a6_99.76%)]">
-      Deepak Kumar
-    </h1>
-  </div>
-</body>
+		<div class="flex items-center justify-start flex-grow pl-6">
+			<h1 class="text-5xl md:text-7xl bg-clip-text text-transparent [background-image:linear-gradient(90.13deg,#d1aad7_.11%,#c88bc4_25.06%,#dd787f_50%,#e78b8d_74.8%,#f2b3a6_99.76%)]">
+				Deepak Kumar
+			</h1>
+		</div>
+	</body>
 </html>
