--- a/index.html
+++ b/index.html
@@ -7,14 +7,30 @@
 		<script type="module" src="src/main.js" defer></script>
 	</head>
 	<body class="bg-gray-900 text-white min-h-screen flex flex-col">
-		<div class="w-full flex justify-between items-center px-8 py-4">
-			<div class="text-2xl font-bold mt-2">DK.</div>
-		</div>
+		<header class="w-full fixed top-0 left-0 bg-gray-900 px-8 py-4 flex justify-between items-center">
+			<div class="text-2xl font-bold">DK.</div>
+			<a href="https://github.com/WHO53" target="_blank" class="text-white">
+				<svg
+					class="w-6 h-6"
+					fill="currentColor"
+					viewBox="0 0 24 24"
+					xmlns="http://www.w3.org/2000/svg"
+				>
+					<path
+						fill-rule="evenodd"
+						d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.207 11.385.6.113.793-.258.793-.577v-2.165c-3.338.724-4.033-1.416-4.033-1.416-.546-1.385-1.333-1.755-1.333-1.755-1.09-.745.083-.729.083-.729 1.205.085 1.84 1.237 1.84 1.237 1.07 1.835 2.807 1.305 3.49.997.108-.776.42-1.305.762-1.605-2.665-.3-5.467-1.332-5.467-5.93 0-1.31.47-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23a11.526 11.526 0 013.003-.404c1.018.005 2.045.137 3.003.404 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.807 5.625-5.477 5.92.432.372.81 1.102.81 2.222v3.293c0 .324.183.697.8.577C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
+						clip-rule="evenodd"
+					/>
+				</svg>
+			</a>
+		</header>
 
-		<div class="flex items-center justify-start flex-grow pl-6">
-			<h1 class="text-5xl md:text-7xl bg-clip-text text-transparent [background-image:linear-gradient(90.13deg,#d1aad7_.11%,#c88bc4_25.06%,#dd787f_50%,#e78b8d_74.8%,#f2b3a6_99.76%)]">
-				Deepak Kumar
-			</h1>
-		</div>
+		<main class="flex flex-col justify-center items-start flex-grow pl-6 min-h-screen">
+			<div class="overflow-hidden">
+				<h1 class="text-5xl md:text-7xl bg-clip-text text-transparent [background-image:linear-gradient(90.13deg,#d1aad7_.11%,#c88bc4_25.06%,#dd787f_50%,#e78b8d_74.8%,#f2b3a6_99.76%)] whitespace-nowrap">
+					Deepak Kumar
+				</h1>
+			</div>
+		</main>
 	</body>
 </html>
