--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Deepak Kumar | WHO53</title>
+		<title>Deepak Meena | WHO53</title>
 		<script type="module" src="src/main.js" defer></script>
 	</head>
 	<body class="bg-gray-900 text-white min-h-screen flex flex-col">
 		<header class="w-full fixed top-0 left-0 bg-gray-900 px-8 py-4 flex justify-between items-center">
-			<div class="text-2xl font-bold">DK.</div>
+			<div class="text-2xl font-bold font-dm">DM.</div>
 			<a href="https://github.com/WHO53" target="_blank" class="text-white">
 				<svg
 					class="w-6 h-6"
@@ -27,8 +27,8 @@
 
 		<main class="flex flex-col justify-center items-start flex-grow pl-6 min-h-screen">
 			<div class="overflow-hidden">
-				<h1 class="text-5xl md:text-7xl bg-clip-text text-transparent [background-image:linear-gradient(90.13deg,#d1aad7_.11%,#c88bc4_25.06%,#dd787f_50%,#e78b8d_74.8%,#f2b3a6_99.76%)] whitespace-nowrap">
-					Deepak Kumar
+				<h1 class="text-4xl md:text-7xl bg-clip-text text-transparent [background-image:linear-gradient(90.13deg,#d1aad7_.11%,#c88bc4_25.06%,#dd787f_50%,#e78b8d_74.8%,#f2b3a6_99.76%)] whitespace-nowrap font-primary">
+					Deepak Meena
 				</h1>
 			</div>
 		</main>
